# coolmcp

./: main.py  pyproject.toml
naver-places/: README.md  pyproject.toml
naver-places/src/naver_places/: cache.py  cli.py  client.py  cookies.py  errors.py  html.py  images.py  ncaptcha.py  server.py  session.py  types.py  views.py
naver-places/src/naver_places/graphql/: client.py  queries.py
naver-places/src/naver_places/types/: __init__.py  base.py  photos.py  place.py  reviews.py  search.py
naver-places/tests/: test_types_and_views.py
